--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,14 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    <%= link_to 'На главную', root_path %>
+    <% unless user_signed_in? %>
+      <%= link_to 'Регистрация', new_user_registration_path %>
+      <%= link_to 'Войти', new_user_session_path %>
+    <% else %>
+      <%= link_to profile_name, profile_path(current_user.id) %>
+      <%= link_to 'Выйти', destroy_user_session_path, method: :delete %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
