add test permissions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
     <% else %>
       <%= link_to profile_name, profile_path(current_user.id) %>
       <%= link_to 'Выйти', destroy_user_session_path, method: :delete %>
+      <% if admin?%>
+        <%= link_to 'Создать категорию', new_category_path %>
+      <% end%>
     <% end %>
     <%= yield %>
   </body>
