--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Posts#index</h1>
 <p>Find me in app/views/posts/index.html.erb</p>
+<%= link_to 'Создать пост', new_post_path %>
+<% @posts.each do |post| %>
+  <h3>
+    <%= link_to post.title, post %>
+  </h3>
+<% end %>
