--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Posts#index</h1>
 <p>Find me in app/views/posts/index.html.erb</p>
-<%= link_to 'Создать пост', new_post_path %>
+<%= link_to 'Создать пост', new_post_path if current_user %>
 <% @posts.each do |post| %>
   <h3>
     <%= link_to post.title, post %>
