--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,7 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h3>
+  Выбор категорий
+</h3>
+<%= render 'categories/categories' %>
 <%= link_to 'Создать пост', new_post_path if current_user %>
 <% @posts.each do |post| %>
   <h3>
