--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.post {
+  border: 3px solid #fff;
+  border-radius: 10px;
+  background: beige;
+  margin-top: 15px;
+
+  a {
+    color: black;
+  }
+}
