--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,10 @@
   Выбор категорий
 </h3>
 <%= render 'categories/categories' %>
+<h3>
+  Выбор по тегу
+</h3>
+<%= render 'tags/tags' %>
 <%= link_to 'Создать пост', new_post_path if current_user %>
 <% @posts.each do |post| %>
   <div class="post col-xl-8 col-lg-8 col-md-10 col-sm-12" >
