add good notifications

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -4,7 +4,7 @@
 .post {
   border: 3px solid #fff;
   border-radius: 10px;
-  background: beige;
+  background: #acb9a1;
   margin-top: 15px;
 
   a {
