--- a/app/assets/stylesheets/tags.scss
+++ b/app/assets/stylesheets/tags.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the tag controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.tags_list {
+  margin: 0;
+  padding: 4px;
+
+  .tag {
+    border: #d5dacf solid 1px;
+    border-radius: 3px;
+    background: #d5dacf;
+    display: inline-block;
+    text-align: center;
+    margin-right: 5px;
+    cursor: pointer;
+
+    a {
+      display: block;
+      text-decoration: none;
+      color: #58585f;
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+  }
+
+  .tag:hover{
+    background: #e9eee2;
+  }
+}
