--- a/app/views/tags/_tags.html.erb
+++ b/app/views/tags/_tags.html.erb
@@ -1,3 +1,7 @@
-<% @tags.each do |tag| %>
-  <%= link_to tag.name, tag %>
-<% end %>
+<ul class="tags_list">
+  <% @tags.each do |tag| %>
+    <li class="tag">
+      <%= link_to tag.name, tag %>
+    </li>
+  <% end %>
+</ul>
