--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,13 +1,12 @@
 <h3>
   <%= profile_name %>
 </h3>
-
 <div class="user_posts">
   <h4>
     Ваши посты
   </h4>
   <% @user.posts.newest.each do |post| %>
-    <%= link_to post.title, post_path %>
+    <%= link_to post.title, post %>
     <span>
         <%= link_to (image_tag 'edit.png'), edit_post_path(post) if author(post) %>
       <%= link_to (image_tag 'delete.png'), post, method: :delete, data: { confirm: 'Вы уверены?'} if author(post) %>
