--- a/app/views/tags/_tags.html.erb
+++ b/app/views/tags/_tags.html.erb
@@ -1,5 +1,5 @@
 <ul class="tags_list">
-  <% @tags.each do |tag| %>
+  <% tags.each do |tag| %>
     <li class="tag">
       <%= link_to tag.name, tag %>
     </li>
