--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -2,5 +2,5 @@
   <%= @tag.name %>
 </h3>
 <% @posts.each do |post| %>
-  <%= link_to post.title, post_path %>
+  <%= link_to post.title, post %>
 <% end %>
