--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -9,6 +9,9 @@
       <li class="nav-item">
         <%= link_to 'Главная', root_path, class: 'nav-link' %>
       </li>
+      <li class="nav-item">
+        <%= link_to 'Новое', fresh_posts_path, class: 'nav-link' %>
+      </li>
       <% unless user_signed_in? %>
       <li class="nav-item">
         <%= link_to 'Регистрация', new_user_registration_path, class: 'nav-link' %>
