add post partial + refactoring

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,4 @@
 <h3>
   <%= @category.name %>
 </h3>
-<% @posts.each do |post| %>
-  <%= link_to post.title, post %>
-  <br/>
-<% end %>
+<%= render @category.posts.newest %>
