--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,6 +1,4 @@
 <h3>
   <%= @tag.name %>
 </h3>
-<% @posts.each do |post| %>
-  <%= link_to post.title, post %>
-<% end %>
+<%= render @tag.posts.newest %>
