--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -5,12 +5,5 @@
   <h4>
     Ваши посты
   </h4>
-  <% @user.posts.newest.each do |post| %>
-    <%= link_to post.title, post %>
-    <span>
-        <%= link_to (image_tag 'edit.png'), edit_post_path(post) if author(post) %>
-      <%= link_to (image_tag 'delete.png'), post, method: :delete, data: { confirm: 'Вы уверены?'} if author(post) %>
-      </span>
-    <br/>
-  <% end %>
+  <%= render @user.posts.newest %>
 </div>
