new background for post

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -4,7 +4,8 @@
 .post {
   border: 3px solid #fff;
   border-radius: 10px;
-  background: #acb9a1;
+  /*background: #acb9a1;*/
+  background: rgba(150, 161, 144, 0.1);
   margin-top: 15px;
 
   a {
